Fix bug with loading screen transition applying to padding
This was making long level names animate text truncation ellipses
inappropriately.

--- a/app/styles/play/level/level-loading-view.sass
+++ b/app/styles/play/level/level-loading-view.sass
@@ -115,7 +115,7 @@ $UNVEIL_TIME: 1.2s
       background-size: 100% 100%
       padding: 4% 80px 40px 80px
       // http://matthewlein.com/ceaser/  Bounce down a bit, then snap up.
-      @include transition($UNVEIL_TIME cubic-bezier(0.285, -0.595, 0.670, -0.600))
+      @include transition(all $UNVEIL_TIME cubic-bezier(0.285, -0.595, 0.670, -0.600), padding 0s)
       &.preview
         top: 0
         right: 0
@@ -125,7 +125,7 @@ $UNVEIL_TIME: 1.2s
           width: calc($code-area-width-blocks - 20px)
         height: auto
         pointer-events: all
-        @include transition($UNVEIL_TIME ease-in-out)
+        @include transition(all $UNVEIL_TIME ease-in-out, padding 0s)
 
         padding: 11vh 70px 40px 50px
         .progress-or-start-container.intro-footer
